syntax = "proto3";

package outer.streaming;

import "outer/streaming/screencapture_option.proto";

option go_package = "go-device-controller/types/protocol/generated/proto/outer/streaming";
option java_package = "com.dogu.protocol.generated.outer.streaming";

message ScreenRecordOption {
  ScreenCaptureOption screen = 1;
  string file_path = 2;
  optional int32 pid = 3;
  optional string etc_param = 10;
}
